# BSplineCurves3D

./: CMakeLists.txt  README.md
Sources/: Resources.qrc
